[package]
name = "poke-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full" ] }
tracing = "0.1.29"
tracing-subscriber = { version="0.3.5", features = ["env-filter"] }
